2014-01-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m: The NSDeveloperDirectory key is deprecated
	on OSX, but lets use it for the development system root.
	On windows systems with the GNUstep development packages installed
	this will point to the location at which those packages are installed.
	In other cases (no specific development environment installed) the
	system root directory is returned.

2014-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m:
	On mingw a file is executable if its extension is in the list
	provided by the PATHEXT environment variable.
	* Source/NSTask.m:
	Simplification/clarification suggested by Riccardo

2014-01-08  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSValueTransformer (+valueTransformerForName:): Fixed to 
	automatically register any available NSValueTransformer subclass that 
	matches  the given name and is not yet registered. This behavior is 
	described in the Cocoa API documentation.

2014-01-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUUID.m:
	* Source/Additions/NSData+GNUstepBase.m: 
	* Headers/GNUstepBase/NSData+GNUstepBase.h: 
	Move random data generation out to the NSData(GNUstepBase) category.

2014-01-07  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSJSONSerialization.m (writeObject()): Fixed double number 
	serialization to encode 17 significant digits (this matches the max
        number of significant digits in the double-precision floating point
        format). This prevents a loss of precision, in case the number has
        more than 3 digits after the decimal point.
	* Tests/base/NSJSONSerialization/json.m: Updated to test double number  
	serialization. 

2014-01-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: Make sure current queue is set for threads
	owned by a queue (and return the main queue for the main thread).
	Avoid needing to create the main queue in the main thread.
